--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						deviceName = device.name;
 
 						if (deviceName === "hachi_BT") {
-							labels = ["EMPTY", "EMPTY", "EMPTY", "EMPTY", "HEAD", "LEFT LEG", "RIGHT LEG", "TAIL"];
+							labels = ["EMPTY", "EMPTY", "EMPTY", "EMPTY", "HEAD", "FRONT LEG", "BACK LEG", "TAIL"];
 							moveSource = 'hachi_moves.json';
 							movePatterns = 'hachi_patterns.json';
 							sentenceSource = 'hachi_sentences.json';
