--- a/index.html
+++ b/index.html
@@ -381,6 +381,7 @@
 				for (let i = 0; i < numPotentiometers; i++) {
 					let label = labels[i];
 					let movement = labelMovements[label];
+					 console.log(movement);
 
 					if (!movement) continue; // Skip if label not found in labelMovements
 
