--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						deviceName = device.name;
 
 						if (deviceName === "hachi_BT") {
-							labels = ["EMPTY", "EMPTY", "EMPTY", "EMPTY", "HEAD", "FRONT LEG", "BACK LEG", "DISABLED"];
+							labels = ["EMPTY", "EMPTY", "EMPTY", "EMPTY", "HEAD", "FRONT LEG", "WAIST", "BACK LEG"];
 							moveSource = 'hachi_moves.json';
 							movePatterns = 'hachi_patterns.json';
 							sentenceSource = 'hachi_sentences.json';
@@ -436,7 +436,7 @@
 					// Check if partMoving or directionMoving are different from their previous values and add movement to the sequence buffer
 					if (partMoving !== previousPart || directionMoving !== previousDirection) {
 						// Add movement to the sequence buffer
-						console.log(partMoving +" "+directionMoving);
+						console.log(partMoving+" "+directionMoving);
 						previousPart = partMoving;
 						previousDirection = directionMoving;
 						trackMovementSequences();
