--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						// Listen for characteristic value changes
 						characteristic.addEventListener("characteristicvaluechanged", handleCharacteristicValueChanged);
 						// Update UI
-						document.getElementById("connectButton").innerHTML = '<span class="material-icons">bluetooth_connected</span> Disconnect Avatar';
+						document.getElementById("connectButton").innerHTML = '<span class="material-icons" style="vertical-align: middle;">bluetooth_connected</span> Disconnect Avatar';
 						isConnected = true;
 						blueToothStatus = "Avatar Online";
 						setTimeout(function() {
@@ -89,7 +89,7 @@
 						await characteristic.stopNotifications();
 						await device.gatt.disconnect();
 						isConnected = false;
-						document.getElementById("connectButton").innerHTML = '<span class="material-icons">bluetooth_searching</span> Connect to Avatar';
+						document.getElementById("connectButton").innerHTML = '<span class="material-icons" style="vertical-align: middle;">bluetooth_searching </span> Connect to Avatar';
 						// Set all potValues to 0
 						setTimeout(function() {
 							startDetectMovement = false;
