--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 		</div>
 		<div id="avatarBTdiv">
 			<!-- Connect Button. -->
-			<button id="connectButton" class="button" disabled><span class="material-icons">bluetooth_searching</span> Connect to Avatar</button>
+			<button id="connectButton" class="button" disabled>
+				<span class="material-icons">bluetooth_searching style="vertical-align: middle;"</span> Connect to Avatar
+			</button>
 		</div>
 		<!-- Div to display status of Avatar BT shop -->
 		<div id="closestShop"></div>
