--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div id="avatarBTdiv">
 			<!-- Connect Button. -->
 			<button id="connectButton" class="button" disabled>
-				<span class="material-icons">bluetooth_searching style="vertical-align: middle;"</span> Connect to Avatar
+				<span class="material-icons" style="vertical-align: middle;">bluetooth_searching</span> Connect to Avatar
 			</button>
 		</div>
 		<!-- Div to display status of Avatar BT shop -->
