--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
 							}
 							// Update the HTML element with the direction and distance walked
 							document.getElementById("currentLocation").innerHTML =
-								"<strong>STATUS: <span class="material-icons" style="vertical-align: middle;">bluetooth</span> Bluetooth:</strong> " + blueToothStatus +
-								", <strong> <span class="material-icons" style="vertical-align: middle;">place</span> Bluetooth:</strong>Latitude:</strong> " + latitude +
+								"<strong>STATUS: <span class='material-icons' style='vertical-align: middle;'>bluetooth</span> Bluetooth:</strong> " + blueToothStatus +
+								", <strong> <span class='material-icons' style='vertical-align: middle;'>place</span> Bluetooth:</strong>Latitude:</strong> " + latitude +
 								", <strong>Longitude:</strong> " + longitude +
 								", <strong>Nearest street:</strong> " + streetName +
 								", <strong>Direction:</strong> " + directionText +
