--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 								"<strong>STATUS: <span class='material-icons' style='vertical-align: middle;'>bluetooth</span> Bluetooth:</strong> " + blueToothStatus +
 								", <strong> <span class='material-icons' style='vertical-align: middle;'>place</span> Latitude:</strong> " + latitude +
 								", <strong>Longitude:</strong> " + longitude +
-								", <strong><span class='material-icons' style='vertical-align: middle;'>location-city</span> >Nearest street:</strong> " + streetName +
+								", <strong><span class='material-icons' style='vertical-align: middle;'>location_city</span> Nearest street:</strong> " + streetName +
 								", <strong><span class='material-icons' style='vertical-align: middle;'>explore</span> Direction:</strong> " + directionText +
 								", <strong><span class='material-icons' style='vertical-align: middle;'>speed</span> Speed:</strong> " + speed.toFixed(2) +
 								" m/s, <strong><span class='material-icons' style='vertical-align: middle;'>directions_walk</span> Distance Walked:</strong> " + totalDistance.toFixed(2) +
