--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 							document.getElementById("currentLocation").innerHTML =
 								"<strong>STATUS: <span class='material-icons' style='vertical-align: middle;'>bluetooth</span> Bluetooth:</strong> " + blueToothStatus +
 								"<strong> <span class='material-icons' style='vertical-align: middle;'>place</span> Latitude:</strong> " + latitude +
-								"<strong>Longitude:</strong> " + longitude +
+								"<strong>Longitude:</strong> " + longitude + "<br>" +
 								"<strong><span class='material-icons' style='vertical-align: middle;'>location_city</span> Nearest street:</strong> " + streetName +
 								"<strong><span class='material-icons' style='vertical-align: middle;'>explore</span> Direction:</strong> " + directionText +
 								"<strong><span class='material-icons' style='vertical-align: middle;'>speed</span> Speed:</strong> " + speed.toFixed(2) +
