--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
 								"<strong>Longitude:</strong> " + longitude + "<br>" +
 								"<strong><span class='material-icons' style='vertical-align: middle;'>location_city</span> Nearest street:</strong> " + streetName +
 								"<strong><span class='material-icons' style='vertical-align: middle;'>explore</span> Direction:</strong> " + directionText +
-								"<strong><span class='material-icons' style='vertical-align: middle;'>speed</span> Speed:</strong> " + speed.toFixed(2) +
-								" m/s <strong><span class='material-icons' style='vertical-align: middle;'>directions_walk</span> Distance Walked:</strong> " + totalDistance.toFixed(2) +
+								"<strong><span class='material-icons' style='vertical-align: middle;'>speed</span> Speed:</strong> " + speed.toFixed(2) + "ms/s" + "<br>" +
+								"<strong><span class='material-icons' style='vertical-align: middle;'>directions_walk</span> Distance Walked:</strong> " + totalDistance.toFixed(2) +
 								" m <strong>Avatar Actions:</strong> "+ partMoving + " " + directionMoving;
 						},
 						function (error) {
