--- a/index.html
+++ b/index.html
@@ -228,12 +228,12 @@
 							}
 							// Update the HTML element with the direction and distance walked
 							document.getElementById("currentLocation").innerHTML =
-								"<strong>STATUS: <span class='material-icons' style='vertical-align: middle;'>bluetooth</span> Bluetooth:</strong> " + blueToothStatus +
-								" <strong> <span class='material-icons' style='vertical-align: middle;'>place</span> Latitude:</strong> " + latitude +
-								"<strong>Longitude:</strong> " + longitude + "<br>" +
+								"<strong><span class='material-icons' style='vertical-align: middle;'>bluetooth</span> Bluetooth:</strong> " + blueToothStatus +
+								" <strong><span class='material-icons' style='vertical-align: middle;'>place</span> Latitude:</strong> " + latitude +
+								"<strong> Longitude:</strong> " + longitude + "<br>" +
 								"<strong><span class='material-icons' style='vertical-align: middle;'>location_city</span> Nearest street:</strong> " + streetName +
-								"<strong><span class='material-icons' style='vertical-align: middle;'>explore</span> Direction:</strong> " + directionText +
-								"<strong><span class='material-icons' style='vertical-align: middle;'>speed</span> Speed:</strong> " + speed.toFixed(2) + "ms/s" + "<br>" +
+								"<strong><span class='material-icons' style='vertical-align: middle;'>explore</span> Direction:</strong> " + directionText + "<br>" +
+								"<strong><span class='material-icons' style='vertical-align: middle;'>speed</span> Speed:</strong> " + speed.toFixed(2) + "ms/s" +
 								"<strong><span class='material-icons' style='vertical-align: middle;'>directions_walk</span> Distance Walked: </strong> " + totalDistance.toFixed(2) +
 								" m <strong>Avatar Actions:</strong> "+ partMoving + " " + directionMoving;
 						},
