--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 								" <strong><span class='material-icons' style='vertical-align: middle;'>place</span> Latitude:</strong> " + latitude +
 								"<strong> Longitude:</strong> " + longitude + "<br>" +
 								"<strong><span class='material-icons' style='vertical-align: middle;'>location_city</span> Nearest street:</strong> " + streetName +
-								"<strong><span class='material-icons' style='vertical-align: middle;'>explore</span> Direction:</strong> " + directionText + "<br>" +
+								" <strong><span class='material-icons' style='vertical-align: middle;'>explore</span> Direction:</strong> " + directionText + "<br>" +
 								"<strong><span class='material-icons' style='vertical-align: middle;'>speed</span> Speed:</strong> " + speed.toFixed(2) + "ms/s" +
 								"<strong><span class='material-icons' style='vertical-align: middle;'>directions_walk</span> Distance Walked: </strong> " + totalDistance.toFixed(2) +
 								" m <strong>Avatar Actions:</strong> "+ partMoving + " " + directionMoving;
@@ -698,7 +698,7 @@
 				try {
 					let sentenceTemplate;
 					if (noNarrative) {
-						// Read sentences from JSON file
+						// Read sentences from JSON file.
 						const sentences = await fetchJSONFile(sentenceSource, cachedSentences);
 						if (!sentences || !Array.isArray(sentences) || sentences.length === 0) {
 							throw new Error("Error: Unable to load or empty sentences array.");
