--- a/index.html
+++ b/index.html
@@ -872,7 +872,7 @@
 			let cachedTagInfo;
 			async function readTag() {
 				try {
-					if (tagID === previousTagID || tagID === 0) {
+					if (tagID === previousTagID || tagID === "0") {
 						// If tagID is the same as the previous one or is 0, do nothing
 						return;
 					} else {
