--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 	</head>
 	<body>
@@ -18,7 +19,7 @@
 		</div>
 		<div id="avatarBTdiv">
 			<!-- Connect Button. -->
-			<button id="connectButton" class="button" disabled>
+			<button id="connectButton" class="button" disabled onclick="connecting_Sound.play()">
 				<span class="material-icons" style="vertical-align: middle;">bluetooth_searching</span> Connect to Avatar
 			</button>
 		</div>
@@ -47,6 +48,21 @@
 			let movePatterns = null;
 			let sentenceSource = null;
 			let tagSource = null;
+
+			var alert_Sound = new Howl({
+			src: ['audio/alert_high-intensity.ogg'],
+			volume: 0.5, // Adjust volume as needed (0 to 1)
+			});
+
+			var success_Sound = new Howl({
+			src: ['audio/navigation_selection-complete-celebration.ogg'],
+			volume: 0.5, // Adjust volume as needed (0 to 1)
+			});
+
+			var connecting_Sound = new Howl({
+			src: ['audio/ui_loading.ogg'],
+			volume: 0.5, // Adjust volume as needed (0 to 1)
+			});
 
 
 			async function connectToDevice() {
