--- a/index.html
+++ b/index.html
@@ -915,6 +915,7 @@
 							// Update previousTagID to the current tagID
 							previousTagID = tagID;
 						} else {
+							alert_Sound.play();
 							console.error('Tag information not found.');
 							return;
 						}
