--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
 			let cachedTagInfo;
 			async function readTag() {
 				try {
-					if (tagID === previousTagID || tagID === "0" || speaking===true) {
+					if (tagID === previousTagID || tagID === "0" || speaking) {
 						// If tagID is the same as the previous one or is 0, do nothing
 						return;
 					} else {
