--- a/index.html
+++ b/index.html
@@ -910,7 +910,7 @@
 								// Dynamically update variables based on tagData
 								window[tagData.variable] = tagData.boolean;
 							}
-							displayText(tagData.displayText);
+							displayText("Success");
 							//partMoving = tagData.partMoving;
 							//directionMoving = tagData.directionMoving;
 
