--- a/index.html
+++ b/index.html
@@ -888,15 +888,20 @@
 
 			let cachedTagInfo;
 			async function readTag() {
+				console.log("1");
 				try {
+					console.log("2");
 					if (tagID === previousTagID || tagID === "0" || speaking) {
 						// If tagID is the same as the previous one or is 0, do nothing
+						console.log("3");
 						return;
 					} else {
+						console.log("4");
 						// Fetch tag information asynchronously
 						const tagInfo = await fetchJSONFile(tagSource, cachedTagInfo);
 
 						if (tagInfo && tagInfo.tags.hasOwnProperty(tagID)) {
+							console.log("5");
 							// Update previousTagID to the current tagID
 							previousTagID = tagID;
 							success_Sound.play();
@@ -910,7 +915,7 @@
 								// Dynamically update variables based on tagData
 								window[tagData.variable] = tagData.boolean;
 							}
-							displayText("Success");
+							displayText(tagData.displayText);
 							//partMoving = tagData.partMoving;
 							//directionMoving = tagData.directionMoving;
 
@@ -921,6 +926,7 @@
 							return;
 						}
 					}
+					console.log("6");
 				} catch (err) {
 					console.error('Error reading tag:', err);
 				}
