--- a/index.html
+++ b/index.html
@@ -52,16 +52,31 @@
 			var alert_Sound = new Howl({
 			src: ['audio/alert_high-intensity.ogg'],
 			volume: 0.5, // Adjust volume as needed (0 to 1)
+			onplayerror: function() {
+					sound.once('unlock', function() {
+					sound.play();
+					});
+				}
 			});
 
 			var success_Sound = new Howl({
 			src: ['audio/navigation_selection-complete-celebration.ogg'],
 			volume: 0.5, // Adjust volume as needed (0 to 1)
+			onplayerror: function() {
+					sound.once('unlock', function() {
+					sound.play();
+					});
+				}
 			});
 
 			var connecting_Sound = new Howl({
 			src: ['audio/ui_loading.ogg'],
 			volume: 0.5, // Adjust volume as needed (0 to 1)
+			onplayerror: function() {
+					sound.once('unlock', function() {
+					sound.play();
+					});
+				}
 			});
 
 
