--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
 			var success_Sound = new Howl({
 			src: ['audio/navigation_selection-complete-celebration.ogg'],
 			volume: 0.5, // Adjust volume as needed (0 to 1)
-			onplayerror: function() {
+				onloaderror: function(error) {
+					console.error('Error loading audio:', error);
+				},
+				onplayerror: function() {
 					sound.once('unlock', function() {
 					sound.play();
 					});
@@ -72,7 +75,10 @@
 			var connecting_Sound = new Howl({
 			src: ['audio/ui_loading.ogg'],
 			volume: 0.5, // Adjust volume as needed (0 to 1)
-			onplayerror: function() {
+				onloaderror: function(error) {
+					console.error('Error loading audio:', error);
+				},
+				onplayerror: function() {
 					sound.once('unlock', function() {
 					sound.play();
 					});
