--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
 			var alert_Sound = new Howl({
 			src: ['audio/alert_high-intensity.ogg'],
+			html5: true,
 			volume: 0.5, // Adjust volume as needed (0 to 1)
 			onloaderror: function(error) {
 					console.error('Error loading audio:', error);
@@ -59,6 +60,7 @@
 
 			var success_Sound = new Howl({
 			src: ['audio/navigation_selection-complete-celebration.ogg'],
+			html5: true,
 			volume: 0.5, // Adjust volume as needed (0 to 1)
 				onloaderror: function(error) {
 					console.error('Error loading audio:', error);
@@ -67,6 +69,7 @@
 
 			var connecting_Sound = new Howl({
 			src: ['audio/ui_loading.ogg'],
+			html5: true,
 			volume: 0.5, // Adjust volume as needed (0 to 1)
 				onloaderror: function(error) {
 					console.error('Error loading audio:', error);
