--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</div>
 		<div id="avatarBTdiv">
 			<!-- Connect Button. -->
-			<button id="connectButton" class="button" disabled onclick="connecting_Sound.play(), displayText('Hi')">
+			<button id="connectButton" class="button" disabled onclick="connecting_Sound.play(), displayText('Connecting...')">
 				<span class="material-icons" style="vertical-align: middle;">bluetooth_searching</span> Connect to Avatar
 			</button>
 		</div>
