--- a/index.html
+++ b/index.html
@@ -49,32 +49,14 @@
 			let sentenceSource = null;
 			let tagSource = null;
 
-			var alert_Sound = new Howl({
-			src: ['audio/alert_high-intensity.mp3'],
-			volume: 0.5, // Adjust volume as needed (0 to 1)
-			onloaderror: function(error) {
-					console.error('Error loading audio:', error);
-				},
-			});
+			var alert_Sound = new Howl({src: ['audio/alert_high-intensity.mp3'],
+			onloaderror: function(error) {console.error('Error loading audio:', error);},});
 
-			var success_Sound = new Howl({
-			src: ['audio/navigation_selection-complete-celebration.mp3'],
-			volume: 0.5, // Adjust volume as needed (0 to 1)
-				onloaderror: function(error) {
-					console.error('Error loading audio:', error);
-				},
-			});
+			var success_Sound = new Howl({src: ['audio/navigation_selection-complete-celebration.mp3'],
+			onloaderror: function(error) {console.error('Error loading audio:', error);},});
 
-			var connecting_Sound = new Howl({
-			src: ['audio/ui_loading.mp3'],
-			volume: 0.5, // Adjust volume as needed (0 to 1)
-				onplayerror: function(error) {
-					console.error('Error playing audio:', error);
-					sound.once('unlock', function() {
-						sound.play();
-					});
-				}
-			});
+			var connecting_Sound = new Howl({src: ['audio/ui_loading.mp3'],
+			onloaderror: function(error) {console.error('Error loading audio:', error);},});
 
 			async function connectToDevice() {
 				try {
