--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@
 					console.log('No checkpoints reached.');
 				}
 			}
-			setInterval(checkCheckpoints(latitude, longitude), 1000);
+			checkCheckpoints(latitude, longitude);
 			function setupColors() {
 				lineColors[0] = color(204, 204, 0); // Dark Yellow
 				lineColors[1] = color(204, 204, 0); // Dark Yellow
